--- a/assets/css/list-mobile-dark.css
+++ b/assets/css/list-mobile-dark.css
@@ -24,26 +24,24 @@ limitations under the License.
   </topcoat-item>
 
 */
-@host {
-  :scope {
-    display: block;
-    padding: 0;
-    margin: 0;
-    font: inherit;
-    color: inherit;
-    background: transparent;
-    border: none;
-    cursor: default;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-    overflow: auto;
-    -webkit-overflow-scrolling: touch;
-    border-top: 1px solid #2f3234;
-    border-bottom: 1px solid #eff1f1;
-    background-color: #444849;
-  }
+:host {
+  display: block;
+  padding: 0;
+  margin: 0;
+  font: inherit;
+  color: inherit;
+  background: transparent;
+  border: none;
+  cursor: default;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  overflow: auto;
+  -webkit-overflow-scrolling: touch;
+  border-top: 1px solid #2f3234;
+  border-bottom: 1px solid #eff1f1;
+  background-color: #444849;
 }
 
 /* @polyfill .header > * */
