--- a/assets/css/navbar-item-mobile-dark.css
+++ b/assets/css/navbar-item-mobile-dark.css
@@ -1,51 +1,49 @@
-@host {
-  :scope {
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-    -webkit-background-clip: padding;
-    -moz-background-clip: padding;
-    background-clip: padding-box;
-    position: relative;
-    display: inline-block;
-    vertical-align: top;
-    padding: 0;
-    margin: 0;
-    font: inherit;
-    color: inherit;
-    background: transparent;
-    border: none;
-    margin: var-margin;
-    line-height: 4rem;
-    vertical-align: top;
-  }
-  
-  .quarter {
-    width: 25%;
-  }
-  .half {
-    width: 50%;
-  }
-  .three-quarters {
-    width: 75%;
-  }
-  .third {
-    width: 33.333%;
-  }
-  .two-thirds {
-    width: 66.666%;
-  }
-  .full {
-    width: 100%;
-  }
+:host {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  -webkit-background-clip: padding;
+  -moz-background-clip: padding;
+  background-clip: padding-box;
+  position: relative;
+  display: inline-block;
+  vertical-align: top;
+  padding: 0;
+  margin: 0;
+  font: inherit;
+  color: inherit;
+  background: transparent;
+  border: none;
+  margin: var-margin;
+  line-height: 4rem;
+  vertical-align: top;
+}
 
-  .left {
-    text-align: left;
-  }
-  .center {
-    text-align: center;
-  }
-  .right {
-    text-align: right;
-  }
+:host(.quarter) {
+  width: 25%;
+}
+:host(.half) {
+  width: 50%;
+}
+:host(.three-quarters) {
+  width: 75%;
+}
+:host(.third) {
+  width: 33:host(.333%;)
+}
+:host(.two-thirds) {
+  width: 66:host(.666%;)
+}
+:host(.full) {
+  width: 100%;
+}
+
+:host(.left) {
+  text-align: left;
+}
+:host(.center) {
+  text-align: center;
+}
+:host(.right) {
+  text-align: right;
 }
