--- a/assets/css/navbar-mobile-dark.css
+++ b/assets/css/navbar-mobile-dark.css
@@ -41,37 +41,36 @@ Navigation Bar
     </topcoat-navbar-item>
   </topcoat-navbar>
 */
-@host {
-  :scope {
-    display: block;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-    -webkit-background-clip: padding;
-    -moz-background-clip: padding;
-    background-clip: padding-box;
-    white-space: nowrap;
-    overflow: hidden;
-    word-spacing: 0;
-    padding: 0;
-    margin: 0;
-    font: inherit;
-    color: inherit;
-    background: transparent;
-    border: none;
-    cursor: default;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-    height: 4rem;
-    padding-left: 1rem;
-    padding-right: 1rem;
-    background: #595b5b;
-    color: #fff;
-    -webkit-box-shadow: inset 0 -1px #333434, 0 1px rgba(0,0,0,0.15);
-    box-shadow: inset 0 -1px #333434, 0 1px rgba(0,0,0,0.15);
-  }
+:host {
+  display: block;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  -webkit-background-clip: padding;
+  -moz-background-clip: padding;
+  background-clip: padding-box;
+  white-space: nowrap;
+  overflow: hidden;
+  word-spacing: 0;
+  padding: 0;
+  margin: 0;
+  font: inherit;
+  color: inherit;
+  background: transparent;
+  border: none;
+  cursor: default;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  height: 4rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  background: #595b5b;
+  color: #fff;
+  -webkit-box-shadow: inset 0 -1px #333434, 0 1px rgba(0,0,0,0.15);
+  box-shadow: inset 0 -1px #333434, 0 1px rgba(0,0,0,0.15);
+}
 .topcoat-navigation-bar__item {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
